--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,296 @@
-requests
-openai 
-scrapy 
-beautifulsoup4 
-loguru 
-newspaper3k 
-lxml-html-clean
-numpy==1.23.5
-pandas
-matplotlib
-scikit-learn
-seaborn
-tensorflow
-wordcloud
-transformers
-torch
+absl-py==2.2.1
+agate==1.9.1
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.14
+aiosignal==1.3.2
+aiosqlite==0.21.0
+alembic==1.15.1
+annotated-types==0.7.0
+anyio==4.8.0
+apache-airflow==2.10.5
+apache-airflow-providers-common-compat==1.5.1
+apache-airflow-providers-common-io==1.5.1
+apache-airflow-providers-common-sql==1.24.0
+apache-airflow-providers-fab==1.5.3
+apache-airflow-providers-ftp==3.12.3
+apache-airflow-providers-http==5.2.1
+apache-airflow-providers-imap==3.8.3
+apache-airflow-providers-smtp==2.0.1
+apache-airflow-providers-sqlite==4.0.1
+apispec==6.8.1
+argcomplete==3.6.1
+asgiref==3.8.1
+asttokens==3.0.0
+astunparse==1.6.3
+async-timeout==5.0.1
+attrs==25.3.0
+Automat==24.8.1
+babel==2.17.0
+beautifulsoup4==4.13.3
+blinker==1.9.0
+cachelib==0.13.0
+cachetools==5.5.2
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.8
+clickclick==20.10.2
+cloudpickle==3.1.1
+colorama==0.4.6
+colorlog==6.9.0
+comm==0.2.2
+ConfigUpdater==3.2
+connexion==2.14.2
+constantly==23.10.4
+contourpy==1.3.1
+cron-descriptor==1.4.5
+croniter==6.0.0
+cryptography==44.0.2
+cssselect==1.3.0
+cycler==0.12.1
+daff==1.3.46
+databricks-sdk==0.46.0
+db-dtypes==1.4.2
+dbt-adapters==1.14.3
+dbt-bigquery==1.9.1
+dbt-common==1.16.0
+dbt-core==1.9.0
+dbt-extractor==0.5.1
+dbt-semantic-interfaces==0.7.4
+debugpy==1.8.13
+decorator==5.2.1
+deepdiff==7.0.1
+defusedxml==0.7.1
+Deprecated==1.2.18
+dill==0.3.9
+distro==1.9.0
+dnspython==2.7.0
+docker==7.1.0
+email_validator==2.2.0
+exceptiongroup==1.2.2
+executing==2.2.0
+fastapi==0.115.11
+feedfinder2==0.0.4
+feedparser==6.0.11
+filelock==3.18.0
+Flask==2.2.5
+Flask-AppBuilder==4.5.3
+Flask-Babel==2.0.0
+Flask-Caching==2.3.1
+Flask-JWT-Extended==4.7.1
+Flask-Limiter==3.12
+Flask-Login==0.6.3
+Flask-Session==0.5.0
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.2.2
+flatbuffers==25.2.10
+fonttools==4.56.0
+frozenlist==1.5.0
+fsspec==2025.3.0
+gast==0.6.0
+gdown==5.2.0
+gitdb==4.0.12
+GitPython==3.1.44
+google-api-core==2.24.2
+google-auth==2.38.0
+google-auth-oauthlib==1.2.1
+google-cloud-bigquery==3.30.0
+google-cloud-core==2.4.3
+google-cloud-dataproc==5.18.1
+google-cloud-storage==2.19.0
+google-crc32c==1.7.0
+google-pasta==0.2.0
+google-re2==1.1.20240702
+google-resumable-media==2.7.2
+googleapis-common-protos==1.69.2
+graphene==3.4.3
+graphql-core==3.2.6
+graphql-relay==3.2.0
+greenlet==3.1.1
+grpc-google-iam-v1==0.14.2
+grpcio==1.71.0
+grpcio-status==1.71.0
+gunicorn==23.0.0
+h11==0.14.0
+h5py==3.13.0
+httpcore==1.0.7
+httpx==0.28.1
+huggingface-hub==0.30.1
+hyperlink==21.0.0
+idna==3.10
+importlib-metadata==6.11.0
+incremental==24.7.2
+inflection==0.5.1
+ipykernel==6.29.5
+ipython==8.34.0
+isodate==0.6.1
+itemadapter==0.11.0
+itemloaders==1.3.2
+itsdangerous==2.2.0
+jedi==0.19.2
+jieba3k==0.35.1
+Jinja2==3.1.6
+jiter==0.9.0
+jmespath==1.0.1
+joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+keras==3.9.1
+kiwisolver==1.4.8
+lazy-object-proxy==1.10.0
+leather==0.4.0
+libclang==18.1.1
+limits==4.4.1
+linkify-it-py==2.0.3
+lockfile==0.12.2
+loguru==0.7.3
+lxml==5.3.1
+lxml_html_clean==0.4.1
+Mako==1.3.9
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+marshmallow==3.26.1
+marshmallow-oneofschema==3.1.1
+marshmallow-sqlalchemy==0.28.2
+mashumaro==3.14
+matplotlib==3.10.1
+matplotlib-inline==0.1.7
+mdit-py-plugins==0.4.2
+mdurl==0.1.2
+methodtools==0.4.7
+ml_dtypes==0.5.1
+mlflow==2.20.4
+mlflow-skinny==2.20.4
+more-itertools==10.6.0
+msgpack==1.1.0
+multidict==6.2.0
+namex==0.0.8
+nest-asyncio==1.6.0
+networkx==3.4.2
+newspaper3k==0.2.8
+nltk==3.9.1
+numpy==2.1.3
+oauthlib==3.2.2
+openai==1.70.0
+opentelemetry-api==1.31.1
+opentelemetry-exporter-otlp==1.31.1
+opentelemetry-exporter-otlp-proto-common==1.31.1
+opentelemetry-exporter-otlp-proto-grpc==1.31.1
+opentelemetry-exporter-otlp-proto-http==1.31.1
+opentelemetry-proto==1.31.1
+opentelemetry-sdk==1.31.1
+opentelemetry-semantic-conventions==0.52b1
+opt_einsum==3.4.0
+optree==0.14.1
+ordered-set==4.1.0
+packaging==24.2
+pandas==2.2.3
+pandas-gbq==0.28.0
+parsedatetime==2.6
+parsel==1.10.0
+parso==0.8.4
+pathspec==0.12.1
+pendulum==3.0.0
+pexpect==4.9.0
+pillow==11.1.0
+platformdirs==4.3.6
+pluggy==1.5.0
+prison==0.2.1
+prompt_toolkit==3.0.50
+propcache==0.3.0
+Protego==0.4.0
+proto-plus==1.26.1
+protobuf==5.29.4
+psutil==7.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyarrow==19.0.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
+pydantic==2.10.6
+pydantic_core==2.27.2
+pydata-google-auth==1.9.1
+PyDispatcher==2.0.7
+Pygments==2.19.1
+PyJWT==2.10.1
+pyOpenSSL==25.0.0
+pyparsing==3.2.1
+PySocks==1.7.1
+python-daemon==3.1.2
+python-dateutil==2.9.0.post0
+python-nvd3==0.16.0
+python-slugify==8.0.4
+pytimeparse==1.1.8
+pytz==2025.1
+PyYAML==6.0.2
+pyzmq==26.3.0
+queuelib==1.8.0
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.3
+requests-file==2.1.0
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+rfc3339-validator==0.1.4
+rich==13.9.4
+rich-argparse==1.7.0
+rpds-py==0.23.1
+rsa==4.9
+safetensors==0.5.3
+scikit-learn==1.6.1
+scipy==1.15.2
+Scrapy==2.12.0
+seaborn==0.13.2
+service-identity==24.2.0
+setproctitle==1.3.5
+sgmllib3k==1.0.0
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+snowplow-tracker==1.1.0
+soupsieve==2.6
+SQLAlchemy==1.4.54
+SQLAlchemy-JSONField==1.0.2
+SQLAlchemy-Utils==0.41.2
+sqlparse==0.5.3
+stack-data==0.6.3
+starlette==0.46.1
+tabulate==0.9.0
+tenacity==9.0.0
+tensorboard==2.19.0
+tensorboard-data-server==0.7.2
+tensorflow==2.19.0
+tensorflow-io-gcs-filesystem==0.37.1
+termcolor==2.5.0
+text-unidecode==1.3
+tf_keras==2.19.0
+threadpoolctl==3.6.0
+time-machine==2.16.0
+tinysegmenter==0.3
+tldextract==5.1.3
+tokenizers==0.21.1
+tomli==2.2.1
+tornado==6.4.2
+tqdm==4.67.1
+traitlets==5.14.3
+transformers==4.50.3
+Twisted==24.11.0
+typing_extensions==4.12.2
+tzdata==2025.1
+uc-micro-py==1.0.3
+universal_pathlib==0.2.6
+urllib3==2.3.0
+uvicorn==0.34.0
+w3lib==2.3.1
+wcwidth==0.2.13
+Werkzeug==2.2.3
+wirerope==1.0.0
+wrapt==1.17.2
+WTForms==3.2.1
+yarl==1.18.3
+zipp==3.21.0
+zope.interface==7.2
