--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
 absl-py==2.2.1
+accelerate==1.6.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.16
+aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.9.0
 asttokens==3.0.0
 astunparse==1.6.3
+async-timeout==5.0.1
 attrs==25.3.0
 Automat==24.8.1
 beautifulsoup4==4.13.3
@@ -17,10 +22,13 @@ contourpy==1.3.1
 cryptography==44.0.2
 cssselect==1.3.0
 cycler==0.12.1
+datasets==3.5.0
 debugpy==1.8.13
 decorator==5.2.1
 defusedxml==0.7.1
+dill==0.3.8
 distro==1.9.0
+evaluate==0.4.3
 exceptiongroup==1.2.2
 executing==2.2.0
 feedfinder2==0.0.4
@@ -28,7 +36,8 @@ feedparser==6.0.11
 filelock==3.18.0
 flatbuffers==25.2.10
 fonttools==4.56.0
-fsspec==2025.3.2
+frozenlist==1.5.0
+fsspec==2024.12.0
 gast==0.4.0
 google-auth==2.38.0
 google-auth-oauthlib==0.4.6
@@ -54,7 +63,7 @@ jmespath==1.0.1
 joblib==1.4.2
 jupyter_client==8.6.3
 jupyter_core==5.7.2
-keras==3.9.1
+keras==2.10.0
 Keras-Preprocessing==1.1.2
 kiwisolver==1.4.8
 libclang==18.1.1
@@ -67,14 +76,16 @@ MarkupSafe==3.0.2
 matplotlib==3.10.1
 matplotlib-inline==0.1.7
 mdurl==0.1.2
-ml_dtypes==0.5.1
+ml-dtypes==0.4.1
 mpmath==1.3.0
+multidict==6.3.1
+multiprocess==0.70.16
 namex==0.0.8
 nest-asyncio==1.6.0
 networkx==3.4.2
 newspaper3k==0.2.8
 nltk==3.9.1
-numpy==2.1.3
+numpy==1.24.3
 nvidia-cublas-cu12==12.4.5.8
 nvidia-cuda-cupti-cu12==12.4.127
 nvidia-cuda-nvrtc-cu12==12.4.127
@@ -100,11 +111,13 @@ pexpect==4.9.0
 pillow==11.1.0
 platformdirs==4.3.7
 prompt_toolkit==3.0.50
+propcache==0.3.1
 Protego==0.4.0
-protobuf==5.29.4
+protobuf==3.19.6
 psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyarrow==19.0.1
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.22
@@ -137,13 +150,14 @@ sniffio==1.3.1
 soupsieve==2.6
 stack-data==0.6.3
 sympy==1.13.1
-tensorboard==2.19.0
-tensorboard-data-server==0.7.2
+tensorboard==2.10.1
+tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
-tensorflow==2.19.0
+tensorflow==2.10.0
 tensorflow-estimator==2.10.0
 tensorflow-io-gcs-filesystem==0.37.1
 termcolor==3.0.1
+tf_keras==2.19.0
 threadpoolctl==3.6.0
 tinysegmenter==0.3
 tldextract==5.1.3
@@ -166,4 +180,6 @@ Werkzeug==3.1.3
 wget==3.2
 wordcloud==1.9.4
 wrapt==1.17.2
+xxhash==3.5.0
+yarl==1.18.3
 zope.interface==7.2
