--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ distro==1.9.0
 evaluate==0.4.3
 exceptiongroup==1.2.2
 executing==2.2.0
+fastapi
 feedfinder2==0.0.4
 feedparser==6.0.11
 filelock==3.18.0
@@ -179,6 +180,7 @@ typing-inspection==0.4.0
 typing_extensions==4.13.0
 tzdata==2025.2
 urllib3==2.3.0
+uvicorn
 w3lib==2.3.1
 wcwidth==0.2.13
 Werkzeug==3.1.3
