--- a/requirements.txt
+++ b/requirements.txt
@@ -46,6 +46,7 @@ fsspec==2024.12.0
 gast==0.4.0
 google-auth==2.38.0
 google-auth-oauthlib==0.4.6
+google-cloud-bigquery==3.31.0
 google-pasta==0.2.0
 grpcio==1.71.0
 h11==0.14.0
@@ -188,3 +189,4 @@ wrapt==1.17.2
 xxhash==3.5.0
 yarl==1.18.3
 zope.interface==7.2
+streamlit
