--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -5,7 +5,6 @@ description = ""
 authors = [
     {name = "Mohamed Hadj",email = "hadj.tmohamed@gmail.com"}
 ]
-readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
 ]
@@ -14,7 +13,7 @@ dependencies = [
 packages = ["dataprediction"]
 
 [tool.setuptools.package-dir]
-my_package = "src/dataprediction"
+my_package = "dataprediction"
 
 
 [build-system]
