--- a/airflow/deploy/Dockerfile_kube
+++ b/airflow/deploy/Dockerfile_kube
@@ -1,4 +1,4 @@
-FROM apache/airflow:2.6.0-python3.10
+FROM apache/airflow:2.10.5
 # Set the Airflow home directory
 ENV AIRFLOW_HOME=/opt/airflow
 USER root
